--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,5 @@
 @import '../styles/_normalize.css';
+
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); */
 
 *,
@@ -17,7 +18,15 @@ body * {
 html,
 body {
   position: relative;
-  height: 100%;
+  /* height: 100%; */
+}
+
+body {
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 p,
@@ -48,6 +57,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 a[href^='tel'] {
