добавила вёрстку калькулятора

--- a/src/components/shared/Dropdown/Dropdown.scss
+++ b/src/components/shared/Dropdown/Dropdown.scss
@@ -7,6 +7,7 @@
   overflow: hidden;
   padding-top: 8px;
   padding-bottom: 8px;
+  background-color: $additonal;
 
   &__li {
     font-family: $secondFont;
