--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -9,8 +9,8 @@ $dark: #111111;
 $lightDark: #575757;
 
 //FONTS
-$mainFont: 'Gilroy', sans-serif;
-$secondFont: 'Gilroy', sans-serif;
+$mainFont: 'Nekst Black', 'sans-serif';
+$secondFont: 'Gilroy', 'sans-serif';
 
 // QUERIES
 @mixin laptop() {
@@ -28,5 +28,26 @@ $secondFont: 'Gilroy', sans-serif;
 @mixin mobile() {
   @media screen and (max-width: 767px) {
     @content;
+  }
+}
+
+//STYLE MIXIN
+@mixin title {
+  font-family: $mainFont;
+  font-size: 54px;
+  line-height: 90%;
+  font-weight: 600;
+  @include mobile {
+    font-size: 34px;
+  }
+}
+
+@mixin label {
+  font-family: $secondFont;
+  color: $primary;
+  font-size: 16px;
+
+  @include mobile {
+    font-size: 14px;
   }
 }
