--- a/src/components/shared/Dropdown/Dropdown.scss
+++ b/src/components/shared/Dropdown/Dropdown.scss
@@ -2,7 +2,7 @@
 .dropdown {
   position: absolute;
   top: 100%;
-  border: 1px solid #f3f3f4;
+  border: $border;
   border-radius: 15px;
   overflow: hidden;
   padding-top: 8px;
