--- a/src/components/widgets/Slider/Slider.scss
+++ b/src/components/widgets/Slider/Slider.scss
@@ -3,8 +3,56 @@
 .slider {
   width: 100%;
   height: 473px;
-  border: 1px solid green;
   margin-top: 21px;
+  position: relative;
+
+  max-width: 1344px;
+
+  &__image {
+    position: absolute;
+    top: 0;
+  }
+
+  &__content {
+    position: absolute;
+    top: 70px;
+    left: 70px;
+    max-width: 500px;
+  }
+  &__title {
+    @include title;
+    color: $additonal;
+  }
+  &__text {
+    font-family: $mainFont;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 600;
+    color: $additonal;
+    margin-top: 32px;
+  }
+
+  &__btn {
+    margin-top: 24px;
+  }
+}
+
+.slider .swiper-horizontal > .swiper-pagination-bullets {
+  bottom: 44px;
+  gap: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slider .swiper-pagination-bullet {
+  width: 6px;
+  height: 6px;
+  background-color: $additonal;
+}
+
+.slider .swiper-pagination-bullet-active {
+  width: 12px;
+  height: 12px;
 }
 
 @include laptop {
