--- a/src/components/widgets/Modal/Modal.scss
+++ b/src/components/widgets/Modal/Modal.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/vars';
-@import '../../../styles/fonts';
+@use '../../../styles/vars' as *;
+
 .modal {
   position: fixed;
   bottom: 0;
@@ -11,10 +11,11 @@
   background-color: rgba(17, 17, 17, 0.5);
   z-index: 1000;
   overflow: hidden;
+  opacity: 0;
 
   &__container {
     position: relative;
-    background-color: #fff;
+    background-color: $additonal;
     border-radius: 16px 16px 0 0;
     width: 100%;
     height: 80%;
@@ -42,9 +43,8 @@
 
   &__text {
     @include label;
-    margin-top: 24px;
-    max-width: 466px;
-    line-height: 150%;
+    // margin-top: 24px;
+    // max-width: 466px;
   }
 
   &__close {
@@ -93,12 +93,6 @@
   &__btnLink {
     color: $dark;
   }
-}
-
-@include laptop {
-}
-
-@include tablet {
 }
 
 @include mobile {
