--- a/src/components/shared/SmallInputWithRange/SmallInputWithRange.scss
+++ b/src/components/shared/SmallInputWithRange/SmallInputWithRange.scss
@@ -29,11 +29,10 @@
     border-radius: 16px;
     border: none;
     margin-right: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
 
     padding: 15px 17px;
     font-family: $mainFont;
-    font-size: 30px;
     color: $primary;
     font-weight: 600;
   }
@@ -56,22 +55,40 @@
     z-index: 2;
   }
 
-  &__inputSign {
+  &__sum {
     font-family: $mainFont;
     font-size: 30px;
     color: $primary;
     font-weight: 600;
+    margin-left: 28px;
+  }
+  &__inputSign {
+    position: absolute;
+    right: 5%;
+    font-size: 20px;
+
+    font-family: $mainFont;
+    color: $primary;
+    font-weight: 600;
+  }
+  &__error {
+    @include errorText;
+    position: absolute;
+    bottom: -25px;
   }
 }
 
 @include laptop {
   .smallRangeInput {
     max-width: 100%;
+    &__container {
+      margin-top: 8px;
+    }
     &__inputText {
       margin-top: 8px;
       font-size: 22px;
     }
-    &__inputSign {
+    &__sum {
       font-size: 22px;
       color: $primary;
       bottom: 19px;
@@ -83,6 +100,11 @@
         bottom: 7px;
         right: 7px;
       }
+    }
+    &__inputSign {
+      font-size: 22px;
+      right: 15px;
+      bottom: 18px;
     }
   }
 }
