фикс слайдера и ползунка

--- a/src/components/shared/InputWithRange/InputWithRange.scss
+++ b/src/components/shared/InputWithRange/InputWithRange.scss
@@ -42,6 +42,10 @@
     position: relative;
     z-index: 2;
   }
+  &__inputRange::-moz-range-thumb {
+    background-color: $secondary;
+    border: none;
+  }
 
   &__inputSign {
     font-family: $mainFont;
