--- a/src/components/shared/SmallInputWithRange/SmallInputWithRange.scss
+++ b/src/components/shared/SmallInputWithRange/SmallInputWithRange.scss
@@ -54,6 +54,10 @@
     position: relative;
     z-index: 2;
   }
+  &__inputRange::-moz-range-thumb {
+    background-color: $secondary;
+    border: none;
+  }
 
   &__sum {
     font-family: $mainFont;
