добавила тултип + фикс калькулятора

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -9,6 +9,7 @@ $dark: #111111;
 // $lightDark: #575757;
 $error: #d53234;
 $inputBg: #f3f3f4;
+$success: #008000;
 
 //FONTS
 $mainFont: 'Nekst Black', 'sans-serif';
