--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,8 +2,6 @@
 
 @import '../styles/_normalize.css';
 
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap'); */
-
 *,
 *:after,
 *:before {
@@ -20,6 +18,7 @@ body * {
 html,
 body {
   position: relative;
+  overflow-x: hidden;
   /* height: 100%; */
 }
 
