--- a/src/components/shared/InfoTooltip/InfoTooltip.scss
+++ b/src/components/shared/InfoTooltip/InfoTooltip.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/vars' as *;
 
 .infoTooltip {
-  position: absolute;
+  position: fixed;
   width: 400px;
   height: 100px;
   background-color: $success;
@@ -9,26 +9,25 @@
   right: 50px;
   border-radius: 8px;
   color: $additonal;
-  font-size: 24px;
+  font-size: 20px;
   font-family: $secondFont;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 2000;
-  // opacity: 0;
 }
 
 @include laptop {
-  .largeButton {
-    padding: 14px 52px 18px 52px;
-    max-width: 345px;
+  .infoTooltip {
+    width: 300px;
+    height: 70px;
+    font-size: 16px;
   }
 }
 
 @include mobile {
-  .largeButton {
-    padding: 14px 0px 18px 0px;
-    max-width: 280px;
-    font-size: 22px;
+  .infoTooltip {
+    bottom: 50px;
+    right: 10px;
   }
 }
